--- a/basic-concepts/index.html
+++ b/basic-concepts/index.html
@@ -1474,7 +1474,7 @@ Dr.&nbsp;Manika Lamba
 </div>
 <aside class="notes">
 <p><em><code>{Zoom-in to see the figure or Right-click to save it!}</code></em></p>
-<p>Information retrieval systems today are based on techniques that were introduced in the 1960s and while the abilities of systems and the algorithms used have been refined, the process of retrieval remains the same.</p>
+<p>Text mining today is based on techniques that were introduced in the 1960s and while the abilities of systems and the algorithms used have been refined, the process remains the same.</p>
 <p>IR is primarily text-based, meaning that we retrieve documents, those documents may be textual, we use queries that are text, and we search representations that are text. There are definitely other forms of IR and other formats of documents that are retrieved but regardless the process remains the same.</p>
 <p>In database systems, whether a flat file system or relational database, each field that is indexed (meaning it is searchable by users) produces what is called an inverted index of index terms. It is this index that is searched.</p>
 <p>Even web search engines like Google use inverted indexes and when you search the engine, you are searching the index of terms. Of course there are other systems that provide full text searching or even full document searching, but there are also limits to what is searched in each.</p>
