--- a/basic-concepts/index.html
+++ b/basic-concepts/index.html
@@ -427,8 +427,9 @@ Dr.&nbsp;Manika Lamba
           display:block!important;
       }</style></aside>
 </section>
-<section id="information-retrieval" class="slide level2 smaller">
-<h2>Information Retrieval</h2>
+<section>
+<section id="information-retrieval" class="title-slide slide level1 smaller center">
+<h1>Information Retrieval</h1>
 <p><code>Definition</code></p>
 <blockquote>
 <p>A process in which sets of records or documents are searched to find items which may help to satisfy an information need</p>
@@ -452,8 +453,8 @@ Dr.&nbsp;Manika Lamba
           display:block!important;
       }</style></aside>
 </section>
-<section id="information-retrieval-1" class="slide level2 smaller">
-<h2>Information Retrieval</h2>
+<section id="information-retrieval-cont." class="slide level2 smaller">
+<h2>Information Retrieval (Cont.)</h2>
 <p>Information Retrieval includes:</p>
 <div class="columns">
 <div class="column" style="width:50%;">
@@ -1069,7 +1070,7 @@ Dr.&nbsp;Manika Lamba
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</section>
+</section></section>
 <section id="role-of-natural-language-processing-in-information-retrieval" class="title-slide slide level1 center">
 <h1>Role of Natural Language Processing in Information Retrieval</h1>
 
@@ -1418,9 +1419,10 @@ Dr.&nbsp;Manika Lamba
           overflow: hidden!important;
           display:block!important;
       }</style></aside>
-</section>
-<section id="text-mining" class="slide level2 smaller">
-<h2>Text Mining</h2>
+</section></section>
+<section>
+<section id="text-mining" class="title-slide slide level1 smaller center">
+<h1>Text Mining</h1>
 <div class="columns">
 <div class="column" style="width:50%;">
 <p><code>Text mining is a process of automatically extracting information from the text with the aim of generating new knowledge</code></p>
@@ -1437,7 +1439,7 @@ Dr.&nbsp;Manika Lamba
 </div>
 </div></div>
 <div class="footer">
-<p>Weiss et al.&nbsp;(2005). Overview of text mining. In: Weiss et al.&nbsp;(eds) Text mining:Predictive methods for analyzing unstructured information. Springer, New York, NY, pp 1–13</p>
+<p>Weiss et al.&nbsp;(2005). Overview of text mining. In: Text mining:Predictive methods for analyzing unstructured information</p>
 </div>
 <aside class="notes">
 <p>With the foundation of IR and NLP in place, let’s explore what text mining is really about.</p>
