--- a/week-4_part1/index.html
+++ b/week-4_part1/index.html
@@ -919,6 +919,7 @@ Dr.&nbsp;Manika Lamba
 <li><code>Static/sample vs. dynamic/monitor corpora</code></li>
 </ul>
 <aside class="notes">
+<p>Let’s discuss some of the main corpora types and their uses. I will only focus on the onces highlighted on the slide.</p>
 <p><code>General corpora</code> represents the universe of particular task and capture full range of varieties of use. It is generally very large and contains balance of texts from a wide variety of different domains of spoken and written language. They are also referred as reference corpora because they are often used as a baseline against which judgements about the language varieties held in more specialised corpora can be made.</p>
 <p>The early general corpora seem tiny by today’s standards, but they continue to be used by both applied and computational linguists, and research has shown that one million words is sufficient to obtain reliable, generalizable results research questions.</p>
 <p>A general corpus is designed is designed to be balanced and include language samples from a wide range of registers or genres in all their diversity. Most of the early general corpora were limited to written language, but because of the advances in technology and increasing interest in spoken language. Because written texts are vastly easier and cheaper to compile than transcript of speech, very few of the large corpora are balanced in terms of speech and writing.</p>
