--- a/week-4_part1/index.html
+++ b/week-4_part1/index.html
@@ -345,7 +345,7 @@ Dr.&nbsp;Manika Lamba
 <section id="introduction" class="title-slide slide level1 center">
 <h1>Introduction</h1>
 <aside class="notes">
-<p>In this week, we are going to cover the most foundational but often underestimated components of text mining and NLP that is corpus building and representativeness.</p>
+<p>In this week, we are going to cover the most foundational but often underestimated components of text mining and NLP, which are corpus building and representativeness.</p>
 <p>Before we can apply algorithms, models, or sophisticated analytical techniques, we have to confront a more basic question: <code>What exactly are we analyzing, and how well does it represent the language or phenomenon we care about?</code></p>
 <p>In practice, many downstream problems in text mining that create bias, unreliable results, or poor generalization can be traced back not to the model, but to choices made during corpus design. So, let’s get started with understanding the term ‘corpus’ itself.</p>
 <style type="text/css">
